--- a/company-quiz-sales-man/src/main/resources/application.properties
+++ b/company-quiz-sales-man/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=company-quiz-sales-man
 server.port=8082
 # Database Configuration
 spring.data.mongodb.uri=mongodb://mongo:mongo@localhost:27017/quiz?authSource=admin
+#spring.data.mongodb.database=quiz
